--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/09/15</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N. (4 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died after dinghy collided with ferry near port of Canakkale (TR) on way to Lesbos (GR)</b><br>Source: BBC<br>
+Found dead: <b>19/06/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sillih Peder (23)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>shot by security forces while trying to enter Turkey near Aslanyazi (TR)</b><br>Source: HRFT/ProAsyl<br>
 
 <br>
 
