--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sillih Peder (23)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>shot by security forces while trying to enter Turkey near Aslanyazi (TR)</b><br>Source: HRFT/ProAsyl<br>
+Found dead: <b>03/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>A. Yhan (man, 25)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>suicide, hanged himself with a phone cord, fearing deportation after asylum application was rejected in France</b><br>Source: IRR/Libération<br>
 
 <br>
 
