--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/06/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>died of unknown causes in the Charleroi asylum centre (BE), had mental health problems but was not monitored</b><br>Source: MNS/FIDH/IRR<br>
+Found dead: <b>20/11/97</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>reportedly drowned in the Adriatic Sea after dinghy travelling to Italy sprung a leak</b><br>Source: MNS/VK/taz/AFP/Reu./FECL/Vita/LS/TL<br>
 
 <br>
 
