--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kwuami Aziaku Prempe (man, 42)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>suicide, hanged himself in his house in Salzwedel (DE) out of fear of deportation</b><br>Source: ARI<br>
+Found dead: <b>11/02/11</b><br>Number of person: <b>35</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>drowned after Tunisian coast guard rammed and sank their boat; 30 missing, 5 bodies found</b><br>Source: MNS/BBC/LESP/LR/Le Monde/Newsaust/MUGAK<br>
 
 <br>
 
