--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/05/06</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found on boat caught up in a storm near Sfax (TN) on way from Libya to Italy</b><br>Source: IPL/ST/FE/Unipa<br>
+Found dead: <b>30/06/07</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sank in the Mediterranean Sea between Libya and Malta</b><br>Source: taz/MNS<br>
 
 <br>
 
