--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/03/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mesfin Germa (man)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>hit by truck walking into Port of Calais (FR) while trying to get to Great Britain</b><br>Source: CMS/DM<br>
+Found dead: <b>23/06/05</b><br>Number of person: <b>27</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned in stormy waters off coast of Malta, Maltese rescue team arrived too late</b><br>Source: ORF/Unipa<br>
 
 <br>
 
