--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/04/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>drowned, found dead 200 metres off coast of the Spanish enclave of Melilla (ES)</b><br>Source: EP<br>
+Found dead: <b>Dec 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>died of exhaustion crossing the desert on Russian-Kazakh border on way to Germany</b><br>Source: MNS<br>
 
 <br>
 
