--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/06/17</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found on deflating boat in the Strait of Sicily near Italy; 1 baby lost her mother, 125 rescued</b><br>Source: SC/IOM<br>
+Found dead: <b>21/12/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Maulut Rozga (boy, 3)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>froze to death in refrigerated truck while trying to reach Greece from Turkey</b><br>Source: NCADC<br>
 
 <br>
 
