--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/07/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, found under truck on Greek ferry in the port of Venice (IT)</b><br>Source: Reu./PICUM/NOB<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 woman; 1 man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>1 drowned when boat sank near Didim (TR); 1 missing, 11 rescued</b><br>Source: Imkander<br>
 
 <br>
 
