--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/10/07</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>9 drowned in shipwreck near Catania (IT); 8 missing</b><br>Source: MUGAK/AFVIC<br>
+Found dead: <b>Feb 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>asylum seeker, died while giving birth at hospital in Dublin (IE) that did not know her medical history</b><br>Source: MN<br>
 
 <br>
 
