--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (18)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>jumped under a train in Zwolle (NL) out of fear of deportation</b><br>Source: MNS<br>
+Found dead: <b>11/10/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>died when smugglers' car overturned on way from Komotini to Kavala (GR) while avoiding police</b><br>Source: MNS<br>
 
 <br>
 
