--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/06/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Majar Abrahem (man)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>stowaway, reportedly drowned off coast of Spain after being forced to leave Cypriot ship</b><br>Source: CEAR/Spanish authorities<br>
+Found dead: <b>03/08/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±30)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, found frozen in landing gear of airplane in Brussels (BE)</b><br>Source: BBC<br>
 
 <br>
 
