--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jun 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Khalid Moufaghid (man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned in the Murazzi River (IT) after being beaten up by bouncers at a club</b><br>Source: CARF/IRR/Searchlight<br>
+Found dead: <b>06/01/16</b><br>Number of person: <b>34</b><br>Name, gender, age: <b>N.N. (7 children; 1 pregnant woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>washed ashore in Ayvalik (TR) and Dikili (TR) after 3 Lesbos-bound boats capsized</b><br>Source: Watch TheMed/IrishTimes/Mail Online<br>
 
 <br>
 
