--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Van N. (man, 29)</b><br>Region of origin: <b>Vietnam</b><br>Cause of death: <b>died in car accident in Dannenreich (DE) while fleeing police</b><br>Source: BF/VK/IN<br>
+Found dead: <b>30/08/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kola Bankole (man, 30)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died at Frankfurt Airport (DE) after being gagged and sedated in preparation for deportation to Nigeria</b><br>Source: taz/ProAsyl/IRR/ST/NCADC/VRF/ZAG<br>
 
 <br>
 
