--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/08/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kola Bankole (man, 30)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died at Frankfurt Airport (DE) after being gagged and sedated in preparation for deportation to Nigeria</b><br>Source: taz/ProAsyl/IRR/ST/NCADC/VRF/ZAG<br>
+Found dead: <b>23/08/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>stowaway, found in landing bay of plane at Heathrow Airport (GB) after flight from South Africa</b><br>Source: GuardianUn./IRR/BBC<br>
 
 <br>
 
