--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/01/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lorin Radu (21)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>shot in front of police station in Saxony-Anhalt (DE) during escape attempt</b><br>Source: taz/Konkret/jW/ZAG<br>
+Found dead: <b>31/12/98</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat sank in the Aegean Sea near Greece</b><br>Source: AFP/MNS<br>
 
 <br>
 
