--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/08/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kwame Osei (±30)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>jumped under train at Eberstadt (DE) when faced with threat of deportation</b><br>Source: Morgengr./CARF/ARI/ZAG<br>
+Found dead: <b>26/06/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards near Darkush (SY) while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
 
 <br>
 
