--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/03/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shambu Lama (man, 40)</b><br>Region of origin: <b>Nepal</b><br>Cause of death: <b>suicide, on train tracks in Gifhorn (DE), fearing deportation after officials lied; lived 14 years in Germany, had son</b><br>Source: Karawane/taz/jW/waz<br>
+Found dead: <b>Oct 05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Suleiman Dialo (man, 30)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>suicide, asylum seeker suffering from depression in Newcastle (GB)</b><br>Source: CpGreat Britain<br>
 
 <br>
 
