--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/06/07</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sank in the Mediterranean Sea between Libya and Malta</b><br>Source: taz/MNS<br>
+Found dead: <b>02/01/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>died of smoke inhalation following arson attack at police station in Málaga (ES)</b><br>Source: MNS/MUGAK/APDHA<br>
 
 <br>
 
