--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>died during police operation to evict migrants from Boukhalef (MA)</b><br>Source: RFI/PICUM<br>
+Found dead: <b>25/05/08</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of dehydration near Grand Canaria (ES), 2 died in the boat, 1 at the hospital; 65 survivors</b><br>Source: NOB/FE/ABC<br>
 
 <br>
 
