--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/04/98</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, 22, 26)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>blown up in minefield while trying to cross Turkish-Greek border</b><br>Source: MNS<br>
+Found dead: <b>18/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>stowaway, found dead in landing gear of airplane flying from Africa to Lisbon (PT)</b><br>Source: MNS/PUB/OCPM<br>
 
 <br>
 
