--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/08/09</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>1 died after boat collided with Algerian coast guard vessel in the port of Annaba (DZ); 11 missing</b><br>Source: BBC/Migreurop/NOB<br>
+Found dead: <b>07/05/00</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after small boat capsized near Tarifa (ES)</b><br>Source: MNS<br>
 
 <br>
 
