--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohamed Korrich (man, 25)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>jumped from train near Opicina (IT) out of fear of deportation to Slovenia</b><br>Source: CARF/IRR/ILM<br>
+Found dead: <b>02/11/16</b><br>Number of person: <b>101</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly missing after shipwreck on way to Italy, vessel contained children</b><br>Source: IOM<br>
 
 <br>
 
