--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/07/02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned near Fuerteventura (ES) after boat capsized on way to Canary Islands (ES)</b><br>Source: EP<br>
+Found dead: <b>05/06/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>shot during fight between migrants at refugee camp in Calais (FR)</b><br>Source: VK/SP<br>
 
 <br>
 
