--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/04/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>body recovered on Tajoura beach (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>19/02/00</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (17 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned in shipwreck near Canary Islands (ES)</b><br>Source: GARA<br>
 
 <br>
 
