--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/12/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 10)</b><br>Region of origin: <b>Jordan, Iraq, Iran, Afghanist</b><br>Cause of death: <b>reportedly drowned after boat sank off coast of Turkey on way to Greece</b><br>Source: MNS/NI/AP/SP/Kurier/Vielfaltletter/BBC/MUGAK<br>
+Found dead: <b>27/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 28)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>hit by vehicle on A16 highway near Calais (FR) while trying to reach Great Britain</b><br>Source: AFP/France3<br>
 
 <br>
 
