--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/02/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when small craft sank between Morocco and Tarifa (ES); 3 survivors</b><br>Source: IOM<br>
+Found dead: <b>30/06/16</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after inflatable dinghy carrying migrants to Italy sank in the Mediterranean Sea</b><br>Source: AFP/Ya.N<br>
 
 <br>
 
